config/k8s/monogo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jkpg-mongodb
  namespace: jkpg-city-replica
spec:
  containers:
  - name: jkpg-mongodb
    image: mongo:latest
    ports:
      - containerPort: 27017
