config/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jkpg-service #own service name
  namespace: jkpg-city-replica
spec:
  selector: 
    app: jkpg-app
  ports:
    - protocol: TCP
      port: 5500
      targetPort: 5500


# service is the netwrok cable
# kubectl apply -f k8s/service.yaml
# kubectl rollout restart deployment/name-deployment -n Namespace
#
