config/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jkpg-ingress
  namespace: jkpg-city-replica
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: jkpg-service 
                port:
                  number: 48484

#to deploy evrething kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.0.4/deploy/static/provider/cloud/deploy.yaml
